@@ -1268,6 +1268,10 @@ class TestCase(unittest.TestCase):
                 continue
             self.assertTrue(p.ppid != this_parent)
 
+    def test_get_environ(self):
+        p = psutil.Process(os.getpid())
+        self.assertEqual(p.get_environ(), os.environ)
+
     def test_get_children(self):
         p = psutil.Process(os.getpid())
         self.assertEqual(p.get_children(), [])
